restore beta/heroku-klarna-test

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,14 @@
 *.AppleDB
 *.AppleDesktop
 
+# built client resources
+/src/*/Zed/*/Static/Public
+/src/*/Zed/*/Static/Assets/sprite
+
+# propel classes
+/src/*/Zed/*/Persistence/Propel/Base/*
+/src/*/Zed/*/Persistence/Propel/Map/*
+
 # OS
 .DS_Store
 
@@ -18,4 +26,3 @@
 /node_modules/
 /tests/_output/*
 !/tests/_output/.gitkeep
-vendor
