--- a/codeception.yml
+++ b/codeception.yml
@@ -15,3 +15,4 @@ settings:
 coverage:
     enabled: true
     whitelist: { include: ['src/*'] }
+    blacklist: { exclude: ['tests/*', '../../../../../vendor/*'] }
