--- a/tests/Functional.suite.yml
+++ b/tests/Functional.suite.yml
@@ -1,6 +1,5 @@
 class_name: FunctionalTester
 modules:
     enabled:
-        - \Testify\Module\Environment
-        - \Config\Module\ConfigInit
-        - \Transfer\Module\TransferGenerate
+        - Filesystem
+        - \Propel\Module\Functional
