--- a/composer.json
+++ b/composer.json
@@ -11,21 +11,17 @@
     }
   },
   "require": {
-    "propel/propel": "2.0.0-alpha5",
+    "propel/propel": "~2.0@dev",
     "spryker/application": "^2.0.0",
-    "spryker/config": "^2.0.0",
     "spryker/console": "^2.0.0",
     "spryker/kernel": "^2.0.0",
     "spryker/library": "^2.0.0",
     "spryker/monolog": "^2.0.0",
     "spryker/silex": "^2.0.0",
-    "spryker/symfony": "^2.0.0"
+    "spryker/symfony": "^2.0.0",
+    "spryker/config": "^2.0.0"
   },
-  "require-dev": {
-    "spryker/code-sniffer": "*",
-    "spryker/testify": "^2.0.0"
-  },
-  "description": "Propel bundle",
+  "description": "propel bundle",
   "license": "proprietary",
   "minimum-stability": "dev",
   "prefer-stable": true,
@@ -33,14 +29,5 @@
     "branch-alias": {
       "dev-master": "2.0.x-dev"
     }
-  },
-  "repositories": [
-    {
-      "type": "composer",
-      "url": "https://code.spryker.com/repo/private"
-    }
-  ],
-  "config": {
-    "sort-packages": true
   }
 }
