--- a/tests/Unit.suite.yml
+++ b/tests/Unit.suite.yml
@@ -1,6 +1,5 @@
 class_name: UnitTester
 modules:
     enabled:
-        - \Testify\Module\Environment
-        - \Config\Module\ConfigInit
-        - \Transfer\Module\TransferGenerate
+        - Asserts
+        - \Propel\Module\Unit
